--- a/k8s-dashboard.yaml
+++ b/k8s-dashboard.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kubernetes-dashboard
+  name: kubernetes-dash
 
 ---
 
@@ -23,9 +23,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
+  namespace: kubernetes-dash
 
 ---
 
@@ -33,15 +33,15 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
+  namespace: kubernetes-dash
 spec:
   ports:
     - port: 443
       targetPort: 8443
   selector:
-    k8s-app: kubernetes-dashboard
+    k8s-app: kubernetes-dash
 
 ---
 
@@ -49,9 +49,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-certs
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash-certs
+  namespace: kubernetes-dash
 type: Opaque
 
 ---
@@ -60,9 +60,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-csrf
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash-csrf
+  namespace: kubernetes-dash
 type: Opaque
 data:
   csrf: ""
@@ -73,9 +73,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-key-holder
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash-key-holder
+  namespace: kubernetes-dash
 type: Opaque
 
 ---
@@ -84,9 +84,9 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-settings
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash-settings
+  namespace: kubernetes-dash
 
 ---
 
@@ -94,28 +94,28 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
+  namespace: kubernetes-dash
 rules:
   # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
   - apiGroups: [""]
     resources: ["secrets"]
-    resourceNames: ["kubernetes-dashboard-key-holder", "kubernetes-dashboard-certs", "kubernetes-dashboard-csrf"]
+    resourceNames: ["kubernetes-dash-key-holder", "kubernetes-dash-certs", "kubernetes-dash-csrf"]
     verbs: ["get", "update", "delete"]
-    # Allow Dashboard to get and update 'kubernetes-dashboard-settings' config map.
+    # Allow Dashboard to get and update 'kubernetes-dash-settings' config map.
   - apiGroups: [""]
     resources: ["configmaps"]
-    resourceNames: ["kubernetes-dashboard-settings"]
+    resourceNames: ["kubernetes-dash-settings"]
     verbs: ["get", "update"]
     # Allow Dashboard to get metrics.
   - apiGroups: [""]
     resources: ["services"]
-    resourceNames: ["heapster", "dashboard-metrics-scraper"]
+    resourceNames: ["heapster", "dash-metrics-scraper"]
     verbs: ["proxy"]
   - apiGroups: [""]
     resources: ["services/proxy"]
-    resourceNames: ["heapster", "http:heapster:", "https:heapster:", "dashboard-metrics-scraper", "http:dashboard-metrics-scraper"]
+    resourceNames: ["heapster", "http:heapster:", "https:heapster:", "dash-metrics-scraper", "http:dash-metrics-scraper"]
     verbs: ["get"]
 
 ---
@@ -124,8 +124,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
 rules:
   # Allow Metrics Scraper to get metrics from the Metrics server
   - apiGroups: ["metrics.k8s.io"]
@@ -138,32 +138,32 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
+  namespace: kubernetes-dash
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: kubernetes-dashboard
+  name: kubernetes-dash
 subjects:
   - kind: ServiceAccount
-    name: kubernetes-dashboard
-    namespace: kubernetes-dashboard
+    name: kubernetes-dash
+    namespace: kubernetes-dash
 
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: kubernetes-dashboard
+  name: kubernetes-dash
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kubernetes-dashboard
+  name: kubernetes-dash
 subjects:
   - kind: ServiceAccount
-    name: kubernetes-dashboard
-    namespace: kubernetes-dashboard
+    name: kubernetes-dash
+    namespace: kubernetes-dash
 
 ---
 
@@ -171,36 +171,36 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard
-  namespace: kubernetes-dashboard
+    k8s-app: kubernetes-dash
+  name: kubernetes-dash
+  namespace: kubernetes-dash
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: kubernetes-dashboard
+      k8s-app: kubernetes-dash
   template:
     metadata:
       labels:
-        k8s-app: kubernetes-dashboard
+        k8s-app: kubernetes-dash
     spec:
       containers:
-        - name: kubernetes-dashboard
-          image: kubernetesui/dashboard:v2.4.0
+        - name: kubernetes-dash
+          image: kubernetesui/dash:v2.4.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8443
               protocol: TCP
           args:
             - --auto-generate-certificates
-            - --namespace=kubernetes-dashboard
+            - --namespace=kubernetes-dash
             # Uncomment the following line to manually specify Kubernetes API server Host
             # If not specified, Dashboard will attempt to auto discover the API server and connect
             # to it. Uncomment only if the default does not work.
             # - --apiserver-host=http://my-address:port
           volumeMounts:
-            - name: kubernetes-dashboard-certs
+            - name: kubernetes-dash-certs
               mountPath: /certs
               # Create on-disk volume to store exec logs
             - mountPath: /tmp
@@ -218,12 +218,12 @@ spec:
             runAsUser: 1001
             runAsGroup: 2001
       volumes:
-        - name: kubernetes-dashboard-certs
+        - name: kubernetes-dash-certs
           secret:
-            secretName: kubernetes-dashboard-certs
+            secretName: kubernetes-dash-certs
         - name: tmp-volume
           emptyDir: {}
-      serviceAccountName: kubernetes-dashboard
+      serviceAccountName: kubernetes-dash
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
@@ -237,15 +237,15 @@ kind: Service
 apiVersion: v1
 metadata:
   labels:
-    k8s-app: dashboard-metrics-scraper
-  name: dashboard-metrics-scraper
-  namespace: kubernetes-dashboard
+    k8s-app: dash-metrics-scraper
+  name: dash-metrics-scraper
+  namespace: kubernetes-dash
 spec:
   ports:
     - port: 8000
       targetPort: 8000
   selector:
-    k8s-app: dashboard-metrics-scraper
+    k8s-app: dash-metrics-scraper
 
 ---
 
@@ -253,25 +253,25 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    k8s-app: dashboard-metrics-scraper
-  name: dashboard-metrics-scraper
-  namespace: kubernetes-dashboard
+    k8s-app: dash-metrics-scraper
+  name: dash-metrics-scraper
+  namespace: kubernetes-dash
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: dashboard-metrics-scraper
+      k8s-app: dash-metrics-scraper
   template:
     metadata:
       labels:
-        k8s-app: dashboard-metrics-scraper
+        k8s-app: dash-metrics-scraper
     spec:
       securityContext:
         seccompProfile:
           type: RuntimeDefault
       containers:
-        - name: dashboard-metrics-scraper
+        - name: dash-metrics-scraper
           image: kubernetesui/metrics-scraper:v1.0.7
           ports:
             - containerPort: 8000
@@ -291,7 +291,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsUser: 1001
             runAsGroup: 2001
-      serviceAccountName: kubernetes-dashboard
+      serviceAccountName: kubernetes-dash
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
